antlr/ReactParser.java
// Generated from C:/Users/2020/IdeaProjects/react-complier/src/antlr/ReactParser.g4 by ANTLR 4.13.1
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ReactParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COLON=1, OPEN_SQUAREBRACKET=2, CLOSE_SQUAREBRACKET=3, OPEN_CURLYBRACES=4, 
		CLOSE_CURLYBRACES=5, IMPORT=6, FROM=7, CONST=8, EXPORT=9, DEFAULT=10, 
		LET=11, VAR=12, USESTATE=13, BOOLEAN=14, React=15, OPEN_PARENTHESIS=16, 
		STARTFUN=17, CLOSE_PARENTHESIS=18, EQUAL=19, COMMA=20, DOT=21, ARROW=22, 
		SEMICOLON=23, ADD=24, MULT=25, DIV=26, SUB=27, ELSE=28, IF=29, GREATERTHAN=30, 
		SMALLERTHAN=31, NUMBER=32, STRING=33, COMMENT=34, WS=35, IMG=36, ANCHOR=37, 
		NORMALELEMENT=38, FUNCTION=39, RETURN=40, COMMENT1=41, WS1=42, React_OPENCURLY=43, 
		COMMENT5=44, WS5=45, ONCLICKr=46, STYLEr=47, SRCr=48, HREFr=49, CLASSNAMEr=50, 
		COMMENT6=51, WS6=52, SELFCLOSETAG=53, ONCLICK=54, KEY=55, STYLE=56, SRC=57, 
		ALT=58, HREF=59, CLASSNAME=60, CLOSETAG=61, COMMENT2=62, WS2=63, CONTENT=64, 
		MAP=65, COMMENT4=66, WS4=67, ISEQUAL=68, SOE=69, GOE=70, COMMENT3=71, 
		WS3=72, ID=73;
	public static final int
		RULE_prog = 0, RULE_useStateDecl = 1, RULE_useStateVal = 2, RULE_assign = 3, 
		RULE_exp = 4, RULE_num = 5, RULE_decl = 6, RULE_val = 7, RULE_pureReact = 8, 
		RULE_reactElelment = 9, RULE_attributeR = 10, RULE_valObjList = 11, RULE_ifState = 12, 
		RULE_else = 13, RULE_condition = 14, RULE_obj = 15, RULE_varObj = 16, 
		RULE_list = 17, RULE_varlist = 18, RULE_jsx = 19, RULE_element = 20, RULE_emptyElement = 21, 
		RULE_normalElement = 22, RULE_content = 23, RULE_attribute = 24, RULE_css = 25, 
		RULE_jsxExp = 26, RULE_map = 27, RULE_imgElement = 28, RULE_component = 29, 
		RULE_comAttribute = 30, RULE_imp = 31, RULE_varimp = 32, RULE_fun = 33, 
		RULE_param = 34, RULE_funBody = 35, RULE_return = 36, RULE_export = 37;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "useStateDecl", "useStateVal", "assign", "exp", "num", "decl", 
			"val", "pureReact", "reactElelment", "attributeR", "valObjList", "ifState", 
			"else", "condition", "obj", "varObj", "list", "varlist", "jsx", "element", 
			"emptyElement", "normalElement", "content", "attribute", "css", "jsxExp", 
			"map", "imgElement", "component", "comAttribute", "imp", "varimp", "fun", 
			"param", "funBody", "return", "export"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", "'['", "']'", "'{'", "'}'", "'import'", "'from'", "'const'", 
			"'export'", "'default'", "'let'", "'var'", null, null, "'React.createElement'", 
			"'('", null, "')'", "'='", "','", "'.'", "'=>'", "';'", "'+'", "'*'", 
			"'/'", "'-'", "'else'", "'if'", "'>'", "'<'", null, null, null, null, 
			"'img'", "'a'", null, "'function'", null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "'/>'", null, "'key'", null, 
			null, "'alt'", null, null, "'</'", null, null, null, "'map'", null, null, 
			"'=='", "'<='", "'>='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COLON", "OPEN_SQUAREBRACKET", "CLOSE_SQUAREBRACKET", "OPEN_CURLYBRACES", 
			"CLOSE_CURLYBRACES", "IMPORT", "FROM", "CONST", "EXPORT", "DEFAULT", 
			"LET", "VAR", "USESTATE", "BOOLEAN", "React", "OPEN_PARENTHESIS", "STARTFUN", 
			"CLOSE_PARENTHESIS", "EQUAL", "COMMA", "DOT", "ARROW", "SEMICOLON", "ADD", 
			"MULT", "DIV", "SUB", "ELSE", "IF", "GREATERTHAN", "SMALLERTHAN", "NUMBER", 
			"STRING", "COMMENT", "WS", "IMG", "ANCHOR", "NORMALELEMENT", "FUNCTION", 
			"RETURN", "COMMENT1", "WS1", "React_OPENCURLY", "COMMENT5", "WS5", "ONCLICKr", 
			"STYLEr", "SRCr", "HREFr", "CLASSNAMEr", "COMMENT6", "WS6", "SELFCLOSETAG", 
			"ONCLICK", "KEY", "STYLE", "SRC", "ALT", "HREF", "CLASSNAME", "CLOSETAG", 
			"COMMENT2", "WS2", "CONTENT", "MAP", "COMMENT4", "WS4", "ISEQUAL", "SOE", 
			"GOE", "COMMENT3", "WS3", "ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ReactParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ReactParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ReactParser.EOF, 0); }
		public List<ImpContext> imp() {
			return getRuleContexts(ImpContext.class);
		}
		public ImpContext imp(int i) {
			return getRuleContext(ImpContext.class,i);
		}
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public List<AssignContext> assign() {
			return getRuleContexts(AssignContext.class);
		}
		public AssignContext assign(int i) {
			return getRuleContext(AssignContext.class,i);
		}
		public List<IfStateContext> ifState() {
			return getRuleContexts(IfStateContext.class);
		}
		public IfStateContext ifState(int i) {
			return getRuleContext(IfStateContext.class,i);
		}
		public List<FunContext> fun() {
			return getRuleContexts(FunContext.class);
		}
		public FunContext fun(int i) {
			return getRuleContext(FunContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(ReactParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(ReactParser.SEMICOLON, i);
		}
		public ExportContext export() {
			return getRuleContext(ExportContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(82);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						setState(76);
						imp();
						}
						break;
					case 2:
						{
						setState(77);
						decl();
						}
						break;
					case 3:
						{
						setState(78);
						assign();
						}
						break;
					case 4:
						{
						setState(79);
						ifState();
						}
						break;
					case 5:
						{
						setState(80);
						fun();
						}
						break;
					case 6:
						{
						setState(81);
						match(SEMICOLON);
						}
						break;
					}
					} 
				}
				setState(86);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXPORT) {
				{
				setState(87);
				export();
				}
			}

			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMICOLON) {
				{
				setState(90);
				match(SEMICOLON);
				}
			}

			setState(93);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UseStateDeclContext extends ParserRuleContext {
		public TerminalNode OPEN_SQUAREBRACKET() { return getToken(ReactParser.OPEN_SQUAREBRACKET, 0); }
		public List<TerminalNode> ID() { return getTokens(ReactParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ReactParser.ID, i);
		}
		public TerminalNode COMMA() { return getToken(ReactParser.COMMA, 0); }
		public TerminalNode CLOSE_SQUAREBRACKET() { return getToken(ReactParser.CLOSE_SQUAREBRACKET, 0); }
		public TerminalNode EQUAL() { return getToken(ReactParser.EQUAL, 0); }
		public TerminalNode CONST() { return getToken(ReactParser.CONST, 0); }
		public TerminalNode VAR() { return getToken(ReactParser.VAR, 0); }
		public TerminalNode LET() { return getToken(ReactParser.LET, 0); }
		public UseStateDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_useStateDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterUseStateDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitUseStateDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitUseStateDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UseStateDeclContext useStateDecl() throws RecognitionException {
		UseStateDeclContext _localctx = new UseStateDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_useStateDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 6400L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(96);
			match(OPEN_SQUAREBRACKET);
			setState(97);
			match(ID);
			setState(98);
			match(COMMA);
			setState(99);
			match(ID);
			setState(100);
			match(CLOSE_SQUAREBRACKET);
			setState(101);
			match(EQUAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UseStateValContext extends ParserRuleContext {
		public TerminalNode USESTATE() { return getToken(ReactParser.USESTATE, 0); }
		public ValContext val() {
			return getRuleContext(ValContext.class,0);
		}
		public TerminalNode CLOSE_PARENTHESIS() { return getToken(ReactParser.CLOSE_PARENTHESIS, 0); }
		public UseStateValContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_useStateVal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterUseStateVal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitUseStateVal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitUseStateVal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UseStateValContext useStateVal() throws RecognitionException {
		UseStateValContext _localctx = new UseStateValContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_useStateVal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(USESTATE);
			setState(104);
			val();
			setState(105);
			match(CLOSE_PARENTHESIS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ReactParser.ID, 0); }
		public TerminalNode EQUAL() { return getToken(ReactParser.EQUAL, 0); }
		public ValContext val() {
			return getRuleContext(ValContext.class,0);
		}
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitAssign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(ID);
			setState(108);
			match(EQUAL);
			setState(109);
			val();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpContext extends ParserRuleContext {
		public NumContext num() {
			return getRuleContext(NumContext.class,0);
		}
		public TerminalNode ID() { return getToken(ReactParser.ID, 0); }
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public TerminalNode MULT() { return getToken(ReactParser.MULT, 0); }
		public TerminalNode DIV() { return getToken(ReactParser.DIV, 0); }
		public TerminalNode ADD() { return getToken(ReactParser.ADD, 0); }
		public TerminalNode SUB() { return getToken(ReactParser.SUB, 0); }
		public ExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitExp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitExp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpContext exp() throws RecognitionException {
		return exp(0);
	}

	private ExpContext exp(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpContext _localctx = new ExpContext(_ctx, _parentState);
		ExpContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_exp, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SUB:
			case NUMBER:
				{
				setState(112);
				num();
				}
				break;
			case ID:
				{
				setState(113);
				match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(130);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(128);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
					case 1:
						{
						_localctx = new ExpContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_exp);
						setState(116);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(117);
						match(MULT);
						setState(118);
						exp(7);
						}
						break;
					case 2:
						{
						_localctx = new ExpContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_exp);
						setState(119);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(120);
						match(DIV);
						setState(121);
						exp(6);
						}
						break;
					case 3:
						{
						_localctx = new ExpContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_exp);
						setState(122);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(123);
						match(ADD);
						setState(124);
						exp(5);
						}
						break;
					case 4:
						{
						_localctx = new ExpContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_exp);
						setState(125);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(126);
						match(SUB);
						setState(127);
						exp(4);
						}
						break;
					}
					} 
				}
				setState(132);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NumContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(ReactParser.NUMBER, 0); }
		public TerminalNode SUB() { return getToken(ReactParser.SUB, 0); }
		public NumContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_num; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterNum(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitNum(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitNum(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumContext num() throws RecognitionException {
		NumContext _localctx = new NumContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_num);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SUB) {
				{
				setState(133);
				match(SUB);
				}
			}

			setState(136);
			match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclContext extends ParserRuleContext {
		public TerminalNode CONST() { return getToken(ReactParser.CONST, 0); }
		public TerminalNode ID() { return getToken(ReactParser.ID, 0); }
		public TerminalNode EQUAL() { return getToken(ReactParser.EQUAL, 0); }
		public ValContext val() {
			return getRuleContext(ValContext.class,0);
		}
		public TerminalNode VAR() { return getToken(ReactParser.VAR, 0); }
		public TerminalNode LET() { return getToken(ReactParser.LET, 0); }
		public UseStateDeclContext useStateDecl() {
			return getRuleContext(UseStateDeclContext.class,0);
		}
		public UseStateValContext useStateVal() {
			return getRuleContext(UseStateValContext.class,0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_decl);
		int _la;
		try {
			setState(151);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(138);
				match(CONST);
				setState(139);
				match(ID);
				setState(140);
				match(EQUAL);
				setState(141);
				val();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(142);
				_la = _input.LA(1);
				if ( !(_la==LET || _la==VAR) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(143);
				match(ID);
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==EQUAL) {
					{
					setState(144);
					match(EQUAL);
					setState(145);
					val();
					}
				}

				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(148);
				useStateDecl();
				setState(149);
				useStateVal();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ValContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(ReactParser.STRING, 0); }
		public TerminalNode ID() { return getToken(ReactParser.ID, 0); }
		public TerminalNode BOOLEAN() { return getToken(ReactParser.BOOLEAN, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public JsxContext jsx() {
			return getRuleContext(JsxContext.class,0);
		}
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public ObjContext obj() {
			return getRuleContext(ObjContext.class,0);
		}
		public ValObjListContext valObjList() {
			return getRuleContext(ValObjListContext.class,0);
		}
		public PureReactContext pureReact() {
			return getRuleContext(PureReactContext.class,0);
		}
		public ValContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_val; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterVal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitVal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitVal(this);
			else return visitor.visitChildren(this);
		}
	}
